Fixes hover cursor on nav links, removes spacing on bottom of footer

--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -92,7 +92,7 @@
                 font-style: normal;
             }
 
-            body { margin-top: 4em; }
+            body { margin-top: 5em; }
 
             .navbar-brand {
                 font-family: 'ChunkFiveRegular';
@@ -124,6 +124,7 @@
             .footer-wrapper {
               // This color matches the footer-grass background.
               background-color: #d1d8cd;
+              overflow: auto;
             }
 
             .cc-description {
