--- a/outreachyhome/templates/partials/_navigation.html
+++ b/outreachyhome/templates/partials/_navigation.html
@@ -1,6 +1,6 @@
 <ul class="navbar-nav ml-auto">
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" id="navbarApplicants" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarApplicants" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Applicants
     </a>
 
@@ -15,7 +15,7 @@
   </li>
 
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" id="navbarVolunteers" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarVolunteers" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Volunteers
     </a>
 
@@ -32,7 +32,7 @@
   </li>
 
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" id="navbarInterns" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarInterns" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Interns
     </a>
 
@@ -45,7 +45,7 @@
   </li>
 
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" id="navbarDonors" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDonors" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Donors
     </a>
 
@@ -56,7 +56,7 @@
   </li>
 
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" id="navbarAboutUs" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarAboutUs" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       About Us
     </a>
 
