--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -7,141 +7,30 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>
-            {% block title %}
-                {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
-            {% endblock %}
-            {% block title_suffix %}
-                {% with self.get_site.site_name as site_name %}
-                    {% if site_name %}- {{ site_name }}{% endif %}
-                {% endwith %}
-            {% endblock %}
-        </title>
-        <meta name="description" content="" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>
+      {% block title %}
+        {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
+      {% endblock %}
 
-        {# Global stylesheets #}
-        {% compress css %}
-        <style type="text/x-scss">
-            // Override simple Bootstrap theming variables.
-            $body-bg: #fff;
-            $body-color: #333;
+      {% block title_suffix %}
+        {% with self.get_site.site_name as site_name %}
+          {% if site_name %}- {{ site_name }}{% endif %}
+        {% endwith %}
+      {% endblock %}
+    </title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-            // Override maps before importing the default variables
-            // or they will be ignored.
-
-            $theme-colors: (
-                primary: #20b2aa
-            );
-
-            // Base Bootstrap definitions
-            @import "node_modules/bootstrap/scss/functions";
-            @import "node_modules/bootstrap/scss/variables";
-            @import "node_modules/bootstrap/scss/mixins";
-
-            // Most variables can be overridden before importing defaults
-            // but anything that is defined in terms of functions over
-            // other variables must come after importing both functions
-            // and variables, but before the first module that uses them.
-
-            // For example, an assignment like this would go here:
-            // $headings-color: theme-color-level(primary, 5);
-
-            // All Bootstrap variables must have their final values
-            // at this point, before the following imports can work.
-
-            // Next, pull in the Bootstrap modules we use. There are
-            // many more to choose from! If a Bootstrap component that
-            // you're trying to use isn't working, look in
-            // node_modules/bootstrap/scss/ for the missing styles. A
-            // component named e.g. "carousel" is probably in
-            // "_carousel.scss", but if that does not help then you
-            // might need to grep for the class names associated with
-            // your component.
-
-            // These are listed in the same order as in
-            // node_modules/bootstrap/scss/bootstrap.scss. It probably
-            // doesn't matter, but I'd suggest keeping it that way just
-            // in case there are subtle ordering dependencies.
-
-            @import "node_modules/bootstrap/scss/reboot";
-            @import "node_modules/bootstrap/scss/type";
-            @import "node_modules/bootstrap/scss/grid";
-            @import "node_modules/bootstrap/scss/tables";
-            @import "node_modules/bootstrap/scss/forms";
-            @import "node_modules/bootstrap/scss/buttons";
-            @import "node_modules/bootstrap/scss/transitions";
-            @import "node_modules/bootstrap/scss/dropdown";
-            @import "node_modules/bootstrap/scss/nav";
-            @import "node_modules/bootstrap/scss/navbar";
-            @import "node_modules/bootstrap/scss/card";
-            @import "node_modules/bootstrap/scss/badge";
-            @import "node_modules/bootstrap/scss/utilities";
-            @import "node_modules/bootstrap/scss/print";
-            @import "node_modules/bootstrap/scss/images";
-
-            // Custom rules for this site
-
-            @font-face {
-                font-family: 'ChunkFiveRegular';
-                src: url(static('css/fonts/Chunkfive-webfont.ttf')) format('truetype');
-                font-weight: normal;
-                font-style: normal;
-            }
-
-            body { margin-top: 5em; }
-
-            .navbar-brand {
-                font-family: 'ChunkFiveRegular';
-            }
-
-            // Django automatically applies a 'helptext' class in forms;
-            // Bootstrap wants us to use other classes instead; so we
-            // let SCSS wire one to the other.
-            .helptext {
-                @extend .form-text;
-                @extend .text-muted;
-            }
-
-            .errorlist {
-              @extend .bg-danger;
-              @extend .text-light;
-            }
-
-            .footer-art {
-              background: url(static("css/img/footer-balloons.png")) no-repeat bottom right;
-              height: 160px;
-            }
-
-            .footer-grass {
-              background: url(static("css/img/footer-grass.png"));
-              height: 39px;
-            }
-
-            .footer-wrapper {
-              // This color matches the footer-grass background.
-              background-color: #d1d8cd;
-              overflow: auto;
-            }
-
-            .cc-description {
-              font-size: $font-size-sm;
-            }
-
-            .navbar-dark .navbar-nav .nav-link {
-              color: white;
-            }
-
-            :target:before { // Offset for anchor link jumping
-              content: "";
-              display: block;
-              height: 70px;
-              margin: -70px 0 0;
-            }
-        </style>
+    {# Global stylesheets #}
+    {% compress css %}
+      <style type="text/x-scss">
+        {% include 'sass/_config.scss' %}
+        {% include 'sass/_fonts.scss' %}
+        {% include 'sass/application.scss' %}
+      </style>
     {% endcompress %}
 
     {# Override this in templates to add extra stylesheets #}
