Adding logo and updating nav hamburger color

--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -11,6 +11,26 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="An internship program that supports diversity in free and open source software." />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@outreachy">
+    <meta name="twitter:title" content="Outreachy | Internships Supporting Diversity in Tech">
+    <meta name="twitter:description" content="An internship program that supports diversity in free and open source software. Learn more by visiting our website!">
+    <!-- Twitter Summary card images must be at least 120x120px -->
+    <meta name="twitter:image" content="{% static 'outreachy-logo-open-graph-1200x1200.png' %}">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Outreachy | Internships Supporting Diversity in Tech " />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ request.scheme }}://{{ request.get_host }}" />
+    <meta property="og:image" content="{{ request.scheme }}://{{ request.get_host }}{% static 'outreachy-logo-open-graph-1200x1200.png' %}">
+    <meta property="og:description" content="An internship program that supports diversity in free and open source software. Learn more by visiting our website!" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="1200">
+
     <title>
       {% block title %}
         {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
@@ -22,31 +42,11 @@
         {% endwith %}
       {% endblock %}
     </title>
-    <meta name="description" content="An internship program that supports diversity in free and open source software." />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Twitter Card data -->
-      <meta name="twitter:card" content="summary">
-      <meta name="twitter:site" content="@outreachy">
-      <meta name="twitter:title" content="Outreachy | Internships Supporting Diversity in Tech">
-      <meta name="twitter:description" content="An internship program that supports diversity in free and open source software. Learn more by visiting our website!">
-      <!-- Twitter Summary card images must be at least 120x120px -->
-      <meta name="twitter:image" content="{% static 'outreachy-logo-open-graph-1200x1200.png' %}">
-
-      <!-- Open Graph data -->
-      <meta property="og:title" content="Outreachy | Internships Supporting Diversity in Tech " />
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content="{{ request.scheme }}://{{ request.get_host }}" />
-      <meta property="og:image" content="{{ request.scheme }}://{{ request.get_host }}{% static 'outreachy-logo-open-graph-1200x1200.png' %}">
-      <meta property="og:description" content="An internship program that supports diversity in free and open source software. Learn more by visiting our website!" />
-      <meta property="og:image:width" content="1200">
-      <meta property="og:image:height" content="1200">
 
     {# Global stylesheets #}
     {% compress css %}
       <style type="text/x-scss">
         {% include 'sass/_config.scss' %}
-        {% include 'sass/_fonts.scss' %}
         {% include 'sass/application.scss' %}
       </style>
     {% endcompress %}
@@ -60,7 +60,9 @@
 
     <div class="navbar navbar-dark bg-primary fixed-top navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand brand" href="/">Outreachy</a>
+        <a class="navbar-brand" href="/">
+          <img src="{% static 'css/img/logo-no-background.svg' %}" />
+        </a>
 
         {% if request.user.is_authenticated %}
           <a class="nav-link" href="{% url 'dashboard' %}">
