Add statistics for sponsors to Outreachy dashboard

--- a/home/templates/home/snippet/dashboard_staff.html
+++ b/home/templates/home/snippet/dashboard_staff.html
@@ -91,6 +91,18 @@ you can send an email to the announcements mailing list to remind applicants of 
 <p><a href="{% url 'email-mentor-intern-start-reminder' %}"><input class="btn btn-success" value="Mentor First Payment Email" /></a>
 
 <hr>
+
+<h1>Statistics for sponsors</h1>
+
+<ul>
+	<li>{{ current_round.number_approved_communities_with_projects }} communties with {{ current_round.number_approved_projects }} projects</li>
+	<li>{{ current_round.number_accepted_initial_applications }} total applicants with accepted initial applications</li>
+	<li>{{ current_round.number_contributors }} applicants have recorded starting a contribution</li>
+	<li>{{ current_round.number_funded_interns }} secured internship spots</li>
+	<li></li>
+</ul>
+
+<hr>
 <h2>Intern Selection</h2>
 
 {% if current_round.has_intern_announcement_deadline_passed %}
