Fix copy-paste error on staff dashboard deadlines description

--- a/home/templates/home/snippet/dashboard_staff.html
+++ b/home/templates/home/snippet/dashboard_staff.html
@@ -50,7 +50,7 @@ you can send an email to the announcements mailing list to remind applicants of 
 
 <p><a href="{% url 'email-mentor-application-deadline-reminder' %}"><input class="btn btn-success" value="Mentor Deadline Email 2" /></a>
 
-<p>Once the two project deadlines have passed, email mentors to remind them who has applied and that they can extend their project deadline:
+<p>Once the first project deadline has passed, email mentors to remind them who has applied and that they can extend their project deadline:
 <ul>
 	<li>After the first application period deadline. Send the email on {{ current_round.appsclose }} after 4pm UTC.</li>
 </ul>
